# nicaragraph

./: Cargo.toml  README.md  index.html
assets/: index-B0Z93_xl.js  index-B3g-6nMD.css  index-Bw03Ebr2.js  index-DGc0CfTA.css  nicaragua_graph_bg-CDTOYPsG.wasm  nicaragua_graph_bg-CKWuMXlN.wasm
data/: nicaragua_graph.json  nicaragua_municipios_simplificado.geojson
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte
frontend/src/components/: Map.svelte  Sidebar.svelte  Tooltip.svelte
frontend/src/lib/: utils.js
src/: lib.rs  map.rs  models.rs  tests.rs
