[package]
name = "nicaragua_graph"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
suma_core = "0.1.1"
ordered-float = {version = "5.1.0", features = ["serde"]}
serde-wasm-bindgen = "0.6.5"
