[package]
name = "nicaragua_graph"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
suma_core = "0.1.2"
ordered-float = {version = "5.1.0", features = ["serde"]}
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1.7"